# graphrag-search

./: .env.compose  .env.docker  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.en.md  README.md  docker-compose.base.yml  docker-compose.ha.yml  docker-compose.integration.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/adapters/: __init__.py  neo4j_client.py  opensearch_client.py
app/api/: routes.py
app/core/: __init__.py  config.py  domain_loader.py  logging.py  metrics.py  request_id.py  tracing.py
app/frontend/: __init__.py  routes.py
app/models/: __init__.py  schemas.py
app/services/: embedding_service.py  llm_service.py  search_service.py
app/tests/: test_api.py  test_embedding_service.py  test_llm_service.py  test_search_service.py
deploy/nginx/: graphrag-api-lb.conf
deploy/prometheus/: prometheus.yml
docs/: domain_modeling_guide.md  load_testing.md
docs/diagrams/: 0_highload_system_architecture.puml  0_system_architecture_tech.puml  1_indexing_and_data_preparation.md  1_indexing_and_data_preparation.puml  2_query_execution_subsystem.md  2_query_execution_subsystem.puml  3_graphrag_extension_subsystem.md  4_ask_llm_subsystem.md  4_ask_llm_subsystem.puml  graphrag_extension_subsystem.puml  hybrid_ranking_subsystem.md  (+3 more)
loadtest/: locustfile.py
scripts/: ingest_movies_graph.py  ingest_movies_jsonl.py  ingest_sample.py
tests/: test_app.py  test_eval_metrics.py  test_graph_service.py  test_ingestion_pipeline.py  test_opensearch_service.py  test_settings.py
(+37 files in other folders)
