[project]
name = "hybrid-graphrag-search"
version = "0.1.0"
description = "Hybrid search system with GraphRAG-style expansion using OpenSearch and Neo4j."
authors = [{ name = "Thesis Prototype", email = "dev@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "opensearch-py==2.4.2",
    "neo4j==5.17.0",
    "pydantic-settings==2.2.1",
    "sentence-transformers==3.0.1",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.6",
    "pytest==8.2.2",
    "httpx==0.27.0",
    "black==24.4.2",
    "isort==5.13.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
